--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=BodegaAdriana;Username=postgres;Password=12345"
+    "DefaultConnection": "Host=localhost;Database=BodegaAdriana;Username=postgres;Password=yourpassword"
   },
   "Logging": {
     "LogLevel": {
